--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,48 @@
-h1 {
+body {
+    align-items: center;
+    background-color: #060606;
+    color: #f1f1f1;
     text-align: center;
-    color: #0000ff;
+    min-height: 100svh;
+    height: 100vh;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.01rem;
 }
+
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90px;
+    border-bottom: 1px solid #666;
+}
+
+header h1 {
+    font-size: 2rem;
+    font-weight: 600;
+    color: #fff;
+    text-align: center;
+}
+
+section {
+    padding-top: 2rem;
+}
+
+.preview {
+    background-color: #f6f6f6;
+    width: fit-content;
+    margin-inline: auto;
+    margin-block: 4rem;
+    color: #060606;
+    border-radius: 3px;
+    font-family: 'Source Code Pro', sans-serif;
+    font-size: 14px;
+    text-align: left;
+    padding: 1rem 2rem;
+}
+
+input {
+    min-width: 320px;
+    padding: .5rem 1.25rem;
+}
+
